# Neo-Hockey-Test

./: .coveragerc  .coveralls.yml  .gitattributes  .gitignore  .landscape.yaml  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  appveyor.yml  bundle.tar  example.py  hockey17-18.db3  hockey17-18.py  hockey17-18.sql  hockey17-18.xml  hockeydata.xml  hockeydatabase.py  hockeydwnload.py  hockeyfunctions.py  hockeyoopfuncs.py  hockeyshortcuts.py  html.php  libhockeydata.py  mkbundle  mkbundle.py  mkcatfilebundle  mkcatfilebundle.py  mkdbfiles  mkhockey.py  mkhockeybundle  mkhockeybundle.py  mkhockeydata.py  mkhockeydatabase.py  mkhockeypyfromdatabase.py  mkhockeypyfromxmlfile.py  mkhockeysqlfromdatabase.py  mkhockeysqlfromxmlfile.py  mkhockeytool.py  (+10 more)
data/: fhmt1.xml  fhmt2.xml  hockeydata15.xml  hockeydata17.xml  libhockeydata.py  mkhockeydata.py
json/: fhmt2.json  hockeydata15.json  hockeydata15alt.json  hockeydata1918.json  hockeydata1942.json  hockeydata20.json
jsonalt/: fhmt1.json  fhmt2.json  hockeydata15.json  hockeydata17.json  hockeydata1918.json  hockeydata1942.json  hockeydata20.json  hockeydata21.json
libhockeydata/: __init__.py  __main__.py  hockeydatabase.py  hockeydwnload.py  hockeydwnloadold.py  hockeyfunctions.py  hockeyoopfuncs.py  hockeyshortcuts.py  libhockeydata.py  versioninfo.py
php/: html.php  index.php  old.php  xhtml.php  xml.php
py/: fhmt1.py  hockeydata15alt.py  hockeydata17.py  hockeydata1918.py  hockeydata1942.py
pyalt/: fhmt1.py  fhmt2.py  hockeydata15.py  hockeydata15alt.py  hockeydata1918.py  hockeydata20.py  (+1 more)
(+237 files in other folders)
